--- a/src/style/_theme.scss
+++ b/src/style/_theme.scss
@@ -1,11 +1,14 @@
 $primary-color: rgb(36, 155, 235);
+$primary-darker: rgb(31, 122, 182);
 $secondary-color: rgb(67, 77, 133);
 $contrast-color: white;
 $font-family: 'Montserrat', sans-serif !important;
 $navbar-height: 50px;
 $primary-grey: rgb(105, 105, 105);
+$off-white: rgb(241, 241, 241);
 $secondary-grey: rgb(175, 175, 175);
 $warning: rgb(236, 102, 39);
+$danger: rgb(209, 0, 0);
 
 
 /* UTILITIES */
