--- a/src/index.scss
+++ b/src/index.scss
@@ -74,6 +74,27 @@ code {
 
 /* End Navbar style*/
 
+/* LOGIN PAGE STYLE */
+.logo {
+  width: 200px;
+  padding: 1em;
+  margin: 2em 0; 
+}
+
+.login-container {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.dropdown {
+  border-color: $secondary-grey;
+  color: $primary-grey;
+  font-size: 1.4em;
+  width: 100%;
+  cursor: pointer;
+  margin-bottom: 0.25em;
+}
+
 /* Question style*/
 
 .container {
@@ -202,6 +223,14 @@ code {
 
 .p-2 {
   padding: 2em;
+}
+
+.pt-2 {
+  padding-top: 2em;
+}
+
+.w-100 {
+  width: 100%;
 }
 
 .d-flex {
