style: Poll result

--- a/src/style/_theme.scss
+++ b/src/style/_theme.scss
@@ -6,7 +6,10 @@ $font-family: 'Montserrat', sans-serif !important;
 $navbar-height: 50px;
 $primary-grey: rgb(117, 117, 117);
 $off-white: rgb(241, 241, 241);
-$secondary-grey: rgb(182, 180, 180);
+$secondary-grey: rgb(202, 202, 202);
+
+$success: rgb(33, 162, 112);
+$success-light: rgba(114, 251, 197, 0.3);
 $warning: rgb(236, 102, 39);
 $danger: rgb(209, 0, 0);
 
