--- a/src/index.scss
+++ b/src/index.scss
@@ -278,33 +278,29 @@ code {
   right: 10px;
   height: 28px;
   width: 28px;
-  background-color: white;
+  background-color: $off-white;
   border-radius: 50%;
 }
 
 /* On mouse-over, add a grey background color */
 .input-group:hover input ~ .checkmark {
-  background-color: #ccc;
+  background-color: $secondary-grey;
 }
 
-/* When the radio button is checked, add a blue background */
 .input-group input:checked ~ .checkmark {
-  background-color: #2196F3;
+  background-color: $primary-color;
 }
 
-/* Create the indicator (the dot/circle - hidden when not checked) */
 .checkmark:after {
   content: "";
   position: absolute;
   display: none;
 }
 
-/* Show the indicator (dot/circle) when checked */
 .input-group input:checked ~ .checkmark:after {
   display: block;
 }
 
-/* Style the indicator (dot/circle) */
 .input-group .checkmark:after {
  	top: 10px;
 	left: 10px;
@@ -330,5 +326,60 @@ code {
 
   &:hover {
     box-shadow: 0 0 2px 2px $primary-grey;
+  }
+}
+
+.poll-option {
+  padding: 1em;
+}
+
+.option-selected {
+  background-color: $success-light;
+  border-radius: 0.5em;
+  border: 1px solid $success;
+  padding: 1em;
+  color: $success;
+  font-weight: 600;
+  margin: 1em 0;
+  position: relative;
+
+  &::after {
+    content: "✓";
+    position: absolute;
+    background-color: #21a270;
+    top: -15px;
+    right: -15px;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    color: white;
+    line-height: 30px;
+    text-align: center;
+  }
+}
+
+
+
+/* Score bar */
+.score-bar {
+  position: relative;
+  height: 2em;
+  line-height: 2em;
+  width: 100%;
+  border-radius: 0.5em;
+  background: $secondary-grey;
+  color: $off-white;
+}
+
+.filler {
+  background: $primary-color;
+  height: 100%;
+  border-radius: inherit;
+  transition: width 1s ease-in;
+}
+
+@media only screen and (max-width: 800px) {
+  .container {
+    margin: 0 1.25em
   }
 }
