--- a/src/index.scss
+++ b/src/index.scss
@@ -223,6 +223,10 @@ code {
   color: $warning;
 }
 
+.m-0 {
+  margin: 0 !important;
+}
+
 .p-1 {
   padding: 1em;
 }
@@ -397,6 +401,98 @@ code {
   color: $primary-grey;
   margin: 0.25em 0;
 }
+
+/* Leaderboard style */
+.score-group {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-bottom: 1px solid $warning;
+  border-radius: 0!important;
+  text-align: center;
+}
+
+.score-group-header {
+  display: flex;
+  padding: 1.5em 1em;
+}
+
+.score {
+  position: relative;
+}
+
+.score-value {
+  position: absolute;
+  background: #e7a559;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  line-height: 40px;
+  text-align: center;
+  left: 90px;
+  top: -10px;
+  color: $off-white;
+  font-size: 1.3em;
+  font-weight: 600;
+  -webkit-box-shadow: inset 0px 0px 20px 0px rgba(0,0,0,0.6);
+  -moz-box-shadow: inset 0px 0px 20px 0px rgba(0,0,0,0.6);
+  box-shadow: inset 0px 0px 20px 0px rgba(0,0,0,0.6);
+}
+
+.score-group:nth-of-type(1) div .score-value {
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  left: 30px;
+  background-color: #e0c550;
+  color: black;
+}
+
+.score-group:nth-of-type(2) div .score-value {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  left: 50px;
+  background-color: #b4b2b3;
+}
+
+.score-group:nth-of-type(1) div img.avatar-big {
+  width: 150px;
+  height: 150px;
+}
+
+.score-group:nth-of-type(2) > div > img.avatar-big {
+  width: 120px;
+  height: 120px;
+}
+
+%medal {
+  margin-left: 1em;
+  width: 45px;
+  height: 45px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.first {
+  @extend %medal;
+  left: 110px;
+  background-image: url('./style/first.png');
+}
+
+.second {
+  @extend %medal;
+  left: 90px;
+  background-image: url('./style/second.png');
+}
+
+.third {
+  @extend %medal;
+  left: 70px;
+  background-image: url('./style/third.png');
+}
+
 
 @media only screen and (max-width: 800px) {
   .container {
